<resources>
    <string name="app_name">Remote Manager</string>
    <string name="device_manager">Device Manager</string>
    <string name="device_info">DeviceInfo</string>
    <string name="button1">Wake On Lan</string>
    <string name="button2">Shutdown</string>
    <string name="host">Host</string>
    <string name="os">OS</string>
    <string name="cpu">CPU</string>
    <string name="ram">RAM</string>
    <string name="swap">Swap</string>
    <string name="uptime">Uptime</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="port">Port</string>
    <string name="mac_address">MAC Address</string>
    <string name="enter_host">Enter host</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_os">Enter OS</string>
    <string name="enter_port">Enter port</string>
    <string name="enter_mac_address">Enter MAC Address</string>
    <string name="reset">Reset</string>
    <string name="ssh_fill">SSH &amp; Fill</string>
    <string name="save">Save</string>
    <string name="add_device">Add Device</string>
    <string name="add_managing_device">Add Managing Device</string>
    <string name="name">Name</string>
    <string name="enter_name">Enter Device Name</string>
    <string name="delete">Delete</string>
    <string name="menu_button1">Device Manager</string>
    <string name="menu_button2">Device Hierarchy</string>
    <string name="menu_settings">Settings</string>
    <string name="item_managing_device_default_name">Managing Device Name</string>
    <string name="button_add_managed_device">Add Managed Device</string>
    <string name="desc_expand_collapse">Expand/Collapse</string>
    <string name="item_managed_device_default_name">Managed Device Name</string>
    <string name="desc_managed_device_icon">Managed Device Icon</string>
    <string name="button_boot">Boot</string>
    <string name="button_shutdown">Shutdown</string>
    <string name="button_remove">Remove</string>
    <string name="settings">Settings</string>
    <string name="theme">Theme</string>
    <string name="language">Language</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="theme_system">System</string>
    <string name="language_english">English</string>
    <string name="language_vietnamese">Vietnamese</string>
    <string name="credits">Credits</string>
    <string name="developer">iamSlightlyWind</string>
    <string name="email_developer">Send me a cat picture</string>
    <string name="view_source">Source Code</string>
    <string name="github_repo">GitHub Repository</string>
</resources>