<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:rowCount="7"
    android:padding="16dp">

    <!-- Host -->
    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnWeight="@dimen/label_column_weight"
        android:layout_rowWeight="1"
        android:text="@string/host" />

    <EditText
        android:id="@+id/host_input"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_row="0"
        android:layout_column="1"
        android:layout_columnWeight="@dimen/input_column_weight"
        android:layout_rowWeight="1"
        android:hint="@string/enter_host" />

    <!-- Username -->
    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_columnWeight="@dimen/label_column_weight"
        android:layout_rowWeight="1"
        android:text="@string/username" />

    <EditText
        android:id="@+id/username_input"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_row="1"
        android:layout_column="1"
        android:layout_columnWeight="@dimen/input_column_weight"
        android:layout_rowWeight="1"
        android:hint="@string/enter_username" />

    <!-- Password -->
    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_columnWeight="@dimen/label_column_weight"
        android:layout_rowWeight="1"
        android:text="@string/password" />

    <EditText
        android:id="@+id/password_input"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_row="2"
        android:layout_column="1"
        android:layout_columnWeight="@dimen/input_column_weight"
        android:layout_rowWeight="1"
        android:hint="@string/enter_password"
        android:inputType="textPassword" />

    <!-- Port -->
    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_columnWeight="@dimen/label_column_weight"
        android:layout_rowWeight="1"
        android:text="@string/port" />

    <EditText
        android:id="@+id/port_input"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_row="3"
        android:layout_column="1"
        android:layout_columnWeight="@dimen/input_column_weight"
        android:layout_rowWeight="1"
        android:hint="@string/enter_port"
        android:inputType="number" />

    <!-- OS -->
    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_row="4"
        android:layout_column="0"
        android:layout_columnWeight="@dimen/label_column_weight"
        android:layout_rowWeight="1"
        android:text="@string/os" />

    <EditText
        android:id="@+id/os_input"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_row="4"
        android:layout_column="1"
        android:layout_columnWeight="@dimen/input_column_weight"
        android:layout_rowWeight="1"
        android:hint="@string/enter_os" />

    <!-- Mac Address -->
    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_row="5"
        android:layout_column="0"
        android:layout_columnWeight="@dimen/label_column_weight"
        android:layout_rowWeight="1"
        android:text="@string/mac_address" />

    <EditText
        android:id="@+id/mac_address_input"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_row="5"
        android:layout_column="1"
        android:layout_columnWeight="@dimen/input_column_weight"
        android:layout_rowWeight="1"
        android:hint="@string/enter_mac_address"
        android:inputType="text" />

    <!-- Buttons -->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_row="6"
        android:layout_column="1"
        android:layout_columnWeight="@dimen/input_column_weight"
        android:layout_rowWeight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/reset_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="16dp"
            android:text="@string/reset" />

        <Button
            android:id="@+id/ssh_fill_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="16dp"
            android:text="@string/ssh_fill" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="16dp"
            android:text="@string/save" />
    </LinearLayout>

</GridLayout>