<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:rowCount="6"
    android:padding="16dp">

    <!-- Host -->
    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnWeight="@dimen/label_column_weight"
        android:layout_rowWeight="1"
        android:text="@string/host" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_row="0"
        android:layout_column="1"
        android:layout_columnWeight="@dimen/input_column_weight"
        android:layout_rowWeight="1"
        android:text="" />

    <!-- OS -->
    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_columnWeight="@dimen/label_column_weight"
        android:layout_rowWeight="1"
        android:text="@string/os" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_row="1"
        android:layout_column="1"
        android:layout_columnWeight="@dimen/input_column_weight"
        android:layout_rowWeight="1"
        android:text="" />

    <!-- CPU -->
    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_columnWeight="@dimen/label_column_weight"
        android:layout_rowWeight="1"
        android:text="@string/cpu" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_row="2"
        android:layout_column="1"
        android:layout_columnWeight="@dimen/input_column_weight"
        android:layout_rowWeight="1"
        android:text="" />

    <!-- RAM -->
    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_columnWeight="@dimen/label_column_weight"
        android:layout_rowWeight="1"
        android:text="@string/ram" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_row="3"
        android:layout_column="1"
        android:layout_columnWeight="@dimen/input_column_weight"
        android:layout_rowWeight="1"
        android:text="" />

    <!-- Swap -->
    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_row="4"
        android:layout_column="0"
        android:layout_columnWeight="@dimen/label_column_weight"
        android:layout_rowWeight="1"
        android:text="@string/swap" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_row="4"
        android:layout_column="1"
        android:layout_columnWeight="@dimen/input_column_weight"
        android:layout_rowWeight="1"
        android:text="" />

    <!-- Uptime -->
    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_row="5"
        android:layout_column="0"
        android:layout_columnWeight="@dimen/label_column_weight"
        android:layout_rowWeight="1"
        android:text="@string/uptime" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_row="5"
        android:layout_column="1"
        android:layout_columnWeight="@dimen/input_column_weight"
        android:layout_rowWeight="1"
        android:text="" />

</GridLayout>